# ClusterTwoWeekTwo_submessages.W22MTW.mwackowski

./: Cargo.toml  README.md
artifacts/: checksums.txt  checksums_intermediate.txt  counter.wasm  manager.wasm
contracts/counter/: Cargo.toml
contracts/manager/: Cargo.toml
contracts/manager/src/: contract.rs  error.rs  integration_tests.rs
node (copy)/: 0_test.ts  package-lock.json
node_js/: 0_test.ts  package.json
